# ppc

./: .gitattributes  .gitignore  DESCRIPTION  MANIFEST.in  README.md  index.html  package-lock.json  package.json  requirements.txt  tsconfig.json  usage.py  webpack.config.js  webpack.serve.config.js
.github/workflows/: static.yml
R/: internal.R
ppc/: __init__.py  _imports_.py  index.html  ppc.js
src/css/: PPC.module.css
src/rs/ppc/: Cargo.toml  rustc-ice-2023-11-15T14_00_52-33496.txt
src/rs/ppc/.cargo/: config.toml
src/rs/ppc/src/: action.rs  axis.rs  buffers.rs  color_bar.rs  color_scale.rs  colors.rs  coordinates.rs  event.rs  lerp.rs  lib.rs  pipelines.rs  selection.rs  spline.rs  wasm_bridge.rs  webgpu.rs  wgsl.rs
src/rs/ppc/src/shaders/: apply_curves.comp.wgsl  axis_lines.wgsl  color_bar.wgsl  create_curves.comp.wgsl  create_segment_curve.comp.wgsl  curve_lines.wgsl  curve_segment.frag.wgsl  curve_segment.vert.wgsl  curve_segments.wgsl  data_lines.wgsl  datum_lines.wgsl  line.frag.wgsl  line.vert.wgsl  reduce_probability.comp.wgsl  sample_spline.comp.wgsl  selection.frag.wgsl  selection.vert.wgsl  selections.wgsl  value_line.frag.wgsl  value_line.vert.wgsl
src/rs/ppc/src/shaders/color_scale/: sample_color_scale.comp.wgsl  transform_color_scale.comp.wgsl
src/rs/ppc/src/shaders/probability_curve/: sample_spline.comp.wgsl
src/ts/: declaration.d.ts  index.ts  types.ts
src/ts/components/: PPC.module.css  PPC.tsx
src/ts/demo/: App.tsx  datasets.ts  index.tsx
src/ts/demo/datasets/: application.ts  application_control.ts  derivation.ts  derivation_control.ts  evaluation.ts  iris.ts  synthetic.ts  synthetic_test.ts  validation.ts  validation_control.ts
study/application/: plot.ipynb
study/tasks/application/: create_dataset.py  create_dataset_a.py  create_dataset_b.py  output_a.json  output_b.json  plot_a.ipynb  plot_b.ipynb
study/tasks/derivation/: penguin.json  penguin.py
study/tasks/evaluation/: plot.ipynb
study/tasks/validation/: plot_b.ipynb
